--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <h1 id="gano">Adivine el número</h1>
   <h3 id="vidas">Tiene <span>3</span> vidas</h3>
   <div>
-       <h2>Presione START para adivinar:</h2>
+       <h2>Presione ADIVINAR para adivinar:</h2>
         <label for="num1">Ingresar un núm del 1 al 10:</label>
         <input type="number" id="num1" name="num1"><br><br>
     <button class="button" onclick="juego()">ADIVINAR</button>
